# Py_Project

./: CLAUDE.md  README.md  pyproject.toml
doc/: 使用手册.md  安装与卸载指南.md
py_project/: __init__.py  config.py  main.py
py_project.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
py_project/core/: __init__.py  attachment.py  link.py  note.py  search_result.py  tag.py  version.py
py_project/engine/: block_id.py  diff_engine.py  export_markdown.py  export_opml.py  fts_engine.py  import_obsidian.py  link_resolver.py  markdown_parser.py  markdown_to_html.py
py_project/services/: attachment_service.py  import_export_service.py  note_service.py  screenshot_service.py  search_service.py  tag_service.py  version_service.py
py_project/storage/: attachment_repo.py  database.py  link_repo.py  note_repo.py  search_repo.py  tag_repo.py  version_repo.py
py_project/ui/: app.py  main_window.py
py_project/ui/dialogs/: export_dialog.py  import_dialog.py  screenshot_dialog.py  tag_editor_dialog.py  version_diff_dialog.py
py_project/ui/editor/: editor_widget.py  syntax_highlighter.py
py_project/ui/panels/: attachment_panel.py  backlinks_panel.py  note_list_panel.py  search_panel.py  tag_model.py  tag_panel.py  version_panel.py
py_project/ui/preview/: preview_styles.py  preview_widget.py
py_project/utils/: file_utils.py  hash_utils.py  time_utils.py
tests/: conftest.py  test_database.py  test_phase2.py  test_phase4.py  test_verify_all.py
