[build-system]
requires = ["setuptools>=64.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "py_project"
version = "0.1.0"
description = "Personal Knowledge Management System"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "WEN454545"}
]
dependencies = [
    "PySide6>=6.6",
    "markdown-it-py>=3.0",
    "mdit-py-plugins>=0.4",
    "PyYAML>=6.0",
    "Pygments>=2.17",
    "Pillow>=10.0",
    "diff-match-patch>=20230430",
    "lxml>=5.0",
    "python-slugify>=8.0",
    "bleach>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-qt>=4.4",
    "coverage>=7.0",
]

[project.scripts]
py-knowledge = "py_project.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["py_project*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
qt_api = "pyside6"
